  * Fix some XCB Xv attribute configuration breakage.
  * Add a configuration option for Xv bicubic filtering, implemented in
    xf86-video-ati 6.9.1.
  * Recognise Xv "blitter" adaptors for port selection purposes.
    NOTE: you will need to remove ~/.xine/catalog.cache when upgrading from
          xine-lib 1.1.15 or older if you wish to use this extra option.

xine-lib (1.1.15) 2008-08-14
  * Security fixes:
    - Fix crashes with various corrupted media files, including Ogg.
      (CVE-2008-3231)
      This includes a libfaad update from the 1.2 branch.
    - Delay V4L video frame preallocation until we know how large they'll be.
    - Fix an exploitable ID3 heap buffer overflow.
    - Check for possible buffer overflow attempts in the Real demuxer.
    - Use size_t for data length variables where there may be int overflows.
    - Add some checks for memory allocation failures.
  * Use external ffmpeg and libfaad by default.
  * V4L: Don't segfault if asked for an input that doesn't exist.
  * Recognise AMR audio (normally found in 3GP files).
  * Recognise Snow video.
  * Xv deinterlacing didn't take the size of the deinterlaced image into
    account; on some chipsets, this would cause image corruption, while on
    others, there would be no problem.
  * V4L: only try and set the tuner if we're going to use it. Setting the tuner
    when using baseband video (CVBS, S-Video) breaks the input.
  * Fix crashes with MP3 files with metadata consisting only of separators.

xine-lib (1.1.14) 2008-06-29
  * DVB changes:
    - Reacquire PIDs whenever a PMT is parsed. (Some channels' PIDs are
      changed on a regular basis.)
    - Recognise more stream formats (as defined in the broadcast PMT).
    - Allow automatic detection of more DVB tuning parameters.
    - Allow the GUI to be disabled.
    - Allow configuration of the location of channels.conf.
  * V4L: allow TV standard selection.
  * Allow input plugins to report MIME type information.